# svalinn

./: Cargo.toml  Makefile.toml  README.md  Vagrantfile
.vagrant/machines/firewall/libvirt/: action_provision  box_meta  created_networks  id  index_uuid  private_key  synced_folders  vagrant_cwd
crates/daemon/: Cargo.toml  build.rs
crates/daemon/src/: conf.rs  logging.rs  main.rs
crates/daemon/src/fw/: mod.rs  xdp.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/rule/: condition.rs  mod.rs
crates/xdp/: Cargo.toml
crates/xdp/src/: main.rs
