[package]
name = "svalinn-daemon"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
svalinn-shared = { path = "../shared" }

aya = { version = "0.13.1" }

serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.8.23" }
serde_json = { version = "1.0.140" }

thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.98" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-appender = { version = "0.2.3" }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
anyhow = { version = "1.0.98" }
aya-build = { version = "0.1.2" }
